devops/kubernetes/overlays/production/patch-plate-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plate-service
spec:
  replicas: 2
